--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "web-vitals": "^1.1.2"
   },
   "devDependencies": {
+    "axios": "^0.24.0",
     "node-sass": "^6.0.0",
     "sass-loader": "^11.1.1"
   },
